@@ -1148,7 +1148,7 @@
 //-- RK_DRAGONHOWLING
 2009,0,0,60000,0,10000,15000
 //-- RK_MILLENNIUMSHIELD
-2011,1000,1000,90000,0,60000,0
+2011,0,1000,90000,0,60000,0
 //-- RK_CRUSHSTRIKE
 2012,1000,0,30000,0,0,0
 //-- RK_REFRESH
